--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2943,7 +2943,7 @@ pre {
   }
 }
 .cid-qtgFsDRCNm {
-  background-image: url("../../../assets/images/logoworld2048x1152-2000x1125.png");
+  background-image: url("../../../assets/images/minetheweb-2120x1414.jpg");
 }
 .cid-qtgFsDRCNm h1 {
   color: #616161;
@@ -2989,7 +2989,7 @@ pre {
   color: #ffffff;
 }
 .cid-qtgMvAxSMq {
-  background-color: #232323;
+  background-image: url("../../../assets/images/mbr-1656x1080.jpg");
 }
 .cid-qtgMvAxSMq h1 {
   color: #616161;
@@ -3372,8 +3372,8 @@ pre {
 }
 .cid-qtm1z90bVV {
   padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
+  padding-bottom: 30px;
+  background-color: #879a9f;
 }
 .cid-qtm1z90bVV .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -3412,6 +3412,286 @@ pre {
   background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
+}
+.cid-qttNDBXBfk {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #879a9f;
+}
+.cid-qttNDBXBfk .content-slider {
+  display: flex;
+  justify-content: center;
+}
+.cid-qttNDBXBfk .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qttNDBXBfk .modal-body .close span {
+  font-style: normal;
+}
+.cid-qttNDBXBfk .carousel-inner > .active,
+.cid-qttNDBXBfk .carousel-inner > .next,
+.cid-qttNDBXBfk .carousel-inner > .prev {
+  display: flex;
+}
+.cid-qttNDBXBfk .carousel-control .icon-next,
+.cid-qttNDBXBfk .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-qttNDBXBfk .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qttNDBXBfk .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-qttNDBXBfk .content-slider-wrap {
+    width: 100%!important;
+  }
+}
+.cid-qttNDBXBfk .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-qttNDBXBfk .boxed-slider > div {
+  position: relative;
+}
+.cid-qttNDBXBfk .container img {
+  width: 100%;
+}
+.cid-qttNDBXBfk .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-qttNDBXBfk .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-qttNDBXBfk .mbr-table-cell {
+  padding: 0;
+}
+.cid-qttNDBXBfk .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-qttNDBXBfk .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-qttNDBXBfk .mbr-overlay {
+  z-index: 1;
+}
+.cid-qttNDBXBfk .container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-qttNDBXBfk .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-qttNDBXBfk .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-qttNDBXBfk .carousel-item-next.carousel-item-left,
+.cid-qttNDBXBfk .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-qttNDBXBfk .active.carousel-item-right,
+.cid-qttNDBXBfk .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-qttNDBXBfk .active.carousel-item-left,
+.cid-qttNDBXBfk .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-control {
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 1.5rem;
+}
+@media (max-width: 767px) {
+  .cid-qttNDBXBfk .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators li.active,
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators li::after,
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-qttNDBXBfk .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-qttNDBXBfk .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-qttNDBXBfk .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-qttNDBXBfk .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-qttNDBXBfk .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-qttNDBXBfk .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-qttNDBXBfk .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-qttNDBXBfk .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-qttNDBXBfk .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-qttNDBXBfk .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-qttNDBXBfk .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-qttNDBXBfk .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-qttNDBXBfk .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-qttNDBXBfk .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-qttNDBXBfk .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-qttNDBXBfk .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.cid-qttNDBXBfk .mbr-slider.slide .container {
+  overflow: hidden;
+  padding: 0;
+}
+.cid-qttNDBXBfk .carousel-inner {
+  height: 100%;
+}
+.cid-qttNDBXBfk .slider-fullscreen-image {
+  height: 100%;
+  background: transparent !important;
+}
+.cid-qttNDBXBfk .image_wrapper {
+  height: 400px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.cid-qttNDBXBfk .image_wrapper img {
+  width: auto !important;
+  height: 100%;
+}
+.cid-qttNDBXBfk .carousel-item .container-slide {
+  text-align: center;
+}
+.cid-qttNDBXBfk .content-slider-wrap {
+  width: 60%;
+}
+.cid-qttSLcCByW {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
@@ -3843,56 +4123,11 @@ pre {
 .cid-qtnTvP5SFR {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
-}
-.cid-qtof5VFbTH {
-  padding-top: 120px;
-  padding-bottom: 15px;
-  background: #465052;
-}
-.cid-qtof5VFbTH .images-container.container-fluid {
-  padding: 0;
-}
-.cid-qtof5VFbTH .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-}
-.cid-qtof5VFbTH .media-container-row .img-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-}
-.cid-qtof5VFbTH .media-container-row .img-item img {
-  width: 100%;
-}
-.cid-qtof5VFbTH .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-qtof5VFbTH .media-container-row .img-item .img-caption p {
-  margin-bottom: 0;
-}
-.cid-qtof5VFbTH .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
-}
-@media (max-width: 992px) {
-  .cid-qtof5VFbTH .img-item {
-    width: 100% !important;
-  }
-  .cid-qtof5VFbTH .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-  }
+  background-color: #1a126c;
 }
 .cid-qtoh55efvo {
-  padding-top: 15px;
-  padding-bottom: 90px;
+  padding-top: 135px;
+  padding-bottom: 30px;
 }
 .cid-qtoh55efvo .mbr-text {
   color: #ffffff;
@@ -3930,7 +4165,7 @@ pre {
 .cid-qtnTvP5SFR {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #1a126c;
 }
 .cid-qtpg8ZaXX5 .navbar {
   padding: .5rem 0;
