create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2147,7 +2147,7 @@ pre {
 .cid-qtnKfLGKnp {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-image: url("../../../assets/images/mbr-1423x1080.jpg");
+  background-image: url("../../../assets/images/mbr-1619x1080.jpg");
 }
 .cid-qtnKfLGKnp .socicon-bg-facebook {
   background: #3e5b98;
@@ -2190,7 +2190,7 @@ pre {
   }
 }
 .cid-qtnKfLGKnp .mbr-section-title {
-  color: #ff7f9f;
+  color: #ffffff;
 }
 .cid-qtnTvP5SFR {
   padding-top: 30px;
@@ -3373,7 +3373,7 @@ pre {
 .cid-qtm1z90bVV {
   padding-top: 90px;
   padding-bottom: 30px;
-  background-color: #879a9f;
+  background-color: #ffffff;
 }
 .cid-qtm1z90bVV .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -3416,7 +3416,7 @@ pre {
 .cid-qttNDBXBfk {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #879a9f;
+  background-color: #ffffff;
 }
 .cid-qttNDBXBfk .content-slider {
   display: flex;
