create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3373,7 +3373,7 @@ pre {
 .cid-qtm1z90bVV {
   padding-top: 90px;
   padding-bottom: 30px;
-  background-color: #ffffff;
+  background-color: #a7d6e6;
 }
 .cid-qtm1z90bVV .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -3416,7 +3416,7 @@ pre {
 .cid-qttNDBXBfk {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #a7d6e6;
 }
 .cid-qttNDBXBfk .content-slider {
   display: flex;
@@ -4888,7 +4888,7 @@ pre {
 .cid-qtnTvP5SFR {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #1a126c;
 }
 .cid-qtot39O96J {
   padding-top: 90px;
