create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -801,12 +801,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -884,7 +884,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1247,18 +1247,18 @@ pre {
   text-align: center;
 }
 .cid-qtoUc6Ymnb {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -1336,7 +1336,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1678,12 +1678,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -1761,7 +1761,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2193,18 +2193,18 @@ pre {
   color: #ffffff;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -2282,7 +2282,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2585,12 +2585,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -2668,7 +2668,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2989,7 +2989,7 @@ pre {
   color: #ffffff;
 }
 .cid-qtgMvAxSMq {
-  background-image: url("../../../assets/images/mbr-1656x1080.jpg");
+  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
 }
 .cid-qtgMvAxSMq h1 {
   color: #616161;
@@ -3011,14 +3011,19 @@ pre {
 .cid-qtgMvAxSMq P {
   color: #ffffff;
 }
+.cid-qtv5Mbypda {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #1a126c;
+}
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -3096,7 +3101,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3689,18 +3694,18 @@ pre {
   width: 60%;
 }
 .cid-qttSLcCByW {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -3778,7 +3783,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4121,8 +4126,8 @@ pre {
   text-align: center;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtoh55efvo {
@@ -4163,18 +4168,18 @@ pre {
   word-break: break-word;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtpg8ZaXX5 .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qtpg8ZaXX5 .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qtpg8ZaXX5 a {
   font-style: normal;
@@ -4252,7 +4257,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qtpg8ZaXX5 .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4528,12 +4533,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #1a126c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #1a126c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -4611,7 +4616,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #1a126c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4886,8 +4891,8 @@ pre {
   }
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtot39O96J {
