--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -801,12 +801,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -884,7 +884,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1247,18 +1247,18 @@ pre {
   text-align: center;
 }
 .cid-qtoUc6Ymnb {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -1336,7 +1336,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1678,12 +1678,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -1761,7 +1761,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2193,18 +2193,18 @@ pre {
   color: #ffffff;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -2282,7 +2282,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2585,12 +2585,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -2668,7 +2668,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3018,12 +3018,12 @@ pre {
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -3101,7 +3101,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3694,18 +3694,18 @@ pre {
   width: 60%;
 }
 .cid-qttSLcCByW {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -3783,7 +3783,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4126,8 +4126,8 @@ pre {
   text-align: center;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
 .cid-qtoh55efvo {
@@ -4168,18 +4168,18 @@ pre {
   word-break: break-word;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
 .cid-qtpg8ZaXX5 .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qtpg8ZaXX5 .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qtpg8ZaXX5 a {
   font-style: normal;
@@ -4257,7 +4257,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qtpg8ZaXX5 .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4531,14 +4531,89 @@ pre {
     border-left: .30em solid transparent;
   }
 }
+.cid-qtot39O96J {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-qtot39O96J h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-qtot39O96J p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-qtot39O96J .card-img {
+  text-align: left;
+  -webkit-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+.cid-qtot39O96J .card-img span {
+  font-size: 72px;
+  color: #ff3366;
+}
+.cid-qtot39O96J .card-box {
+  padding-left: 1rem;
+}
+@media (max-width: 991px) {
+  .cid-qtot39O96J .card-img {
+    text-align: left;
+    padding-bottom: 0.75rem;
+  }
+  .cid-qtot39O96J .card-box {
+    padding-left: 0;
+  }
+}
+.cid-qtot39O96J P {
+  text-align: left;
+}
+.cid-qtot7IanJo {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-qtot7IanJo h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-qtot7IanJo p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-qtot7IanJo .card-img {
+  text-align: left;
+  background-color: #fff;
+  padding: 3rem 2.5rem 0 2.5rem;
+}
+.cid-qtot7IanJo .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-qtot7IanJo .card-box {
+  padding: 0rem 2.5rem 3rem 2.5rem;
+  background-color: #fff;
+}
+.cid-qtot7IanJo .card-title,
+.cid-qtot7IanJo .card-img {
+  color: #465052;
+  text-align: center;
+}
+.cid-qtnTvP5SFR {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #1a126c;
+}
 .cid-qs1TupRcIH .navbar {
   padding: .5rem 0;
-  background: #1a126c;
+  background: #073b4c;
   transition: none;
   min-height: 77px;
 }
 .cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
-  background: #1a126c;
+  background: #073b4c;
 }
 .cid-qs1TupRcIH a {
   font-style: normal;
@@ -4616,7 +4691,7 @@ pre {
   padding-bottom: 0;
 }
 .cid-qs1TupRcIH .dropdown .dropdown-menu {
-  background: #1a126c;
+  background: #073b4c;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4890,78 +4965,56 @@ pre {
     border-left: .30em solid transparent;
   }
 }
-.cid-qtnTvP5SFR {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.cid-qtoUc6Ymnb {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
-.cid-qtot39O96J {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #f9f9f9;
+.cid-qtxySt6gLZ {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/jumbotron.jpg");
 }
-.cid-qtot39O96J h4 {
-  text-align: left;
-  font-weight: 500;
-}
-.cid-qtot39O96J p {
-  color: #767676;
-  text-align: left;
-  margin-bottom: 0;
-}
-.cid-qtot39O96J .card-img {
-  text-align: left;
-  -webkit-flex: 1 0 auto;
-  flex: 1 0 auto;
-}
-.cid-qtot39O96J .card-img span {
-  font-size: 72px;
-  color: #ff3366;
-}
-.cid-qtot39O96J .card-box {
-  padding-left: 1rem;
-}
-@media (max-width: 991px) {
-  .cid-qtot39O96J .card-img {
-    text-align: left;
-    padding-bottom: 0.75rem;
-  }
-  .cid-qtot39O96J .card-box {
-    padding-left: 0;
-  }
-}
-.cid-qtot39O96J P {
-  text-align: left;
-}
-.cid-qtot7IanJo {
+.cid-qtxz2EvyCS {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
-.cid-qtot7IanJo h4 {
-  text-align: left;
-  font-weight: 500;
+.cid-qtxz2EvyCS .card-img a {
+  display: block;
+  padding-top: 2rem;
 }
-.cid-qtot7IanJo p {
-  color: #767676;
-  text-align: left;
+.cid-qtxz2EvyCS .card-box {
+  padding: 0 2rem;
+}
+.cid-qtxz2EvyCS .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qtxz2EvyCS .mbr-section-btn a {
+  margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-qtot7IanJo .card-img {
+.cid-qtxz2EvyCS h4 {
+  font-weight: 500;
+  margin-bottom: 0;
   text-align: left;
-  background-color: #fff;
-  padding: 3rem 2.5rem 0 2.5rem;
+  padding-top: 2rem;
 }
-.cid-qtot7IanJo .card-img span {
-  font-size: 72px;
-  color: #707070;
+.cid-qtxz2EvyCS p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
 }
-.cid-qtot7IanJo .card-box {
-  padding: 0rem 2.5rem 3rem 2.5rem;
-  background-color: #fff;
+.cid-qtxz2EvyCS .mbr-text {
+  color: #767676;
 }
-.cid-qtot7IanJo .card-title,
-.cid-qtot7IanJo .card-img {
-  color: #465052;
-  text-align: center;
+.cid-qtxz2EvyCS .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qtxz2EvyCS .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
 }
