--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1161,6 +1161,98 @@ pre {
 .cid-qs1TxS3uO1 H1 {
   color: #ffffff;
 }
+.cid-qtKMMsiNYn {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: url("../../../assets/images/background2.jpg");
+}
+.cid-qtKMMsiNYn .mbr-section-subtitle {
+  color: #1a126c;
+  font-weight: 300;
+}
+.cid-qtKMMsiNYn .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-qtKMMsiNYn .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-qtKMMsiNYn .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-qtKMMsiNYn .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-qtKMMsiNYn .countdown-cont {
+  background: linear-gradient(45deg, #149dcc, #c8ceaf);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qtKMMsiNYn .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-qtKMMsiNYn .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-qtKMMsiNYn .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-qtKMMsiNYn .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-qtKMMsiNYn .number,
+  .cid-qtKMMsiNYn .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-qtKMMsiNYn .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-qtKMMsiNYn H2 {
+  color: #1a126c;
+}
 .cid-qtto6rGjne {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -1176,79 +1268,57 @@ pre {
 .cid-qtto6rGjne H2 {
   color: #ffffff;
 }
-.cid-qs3aoRJYKa {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #1a126c;
+.cid-qtKNU5kiTS {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #7fdbfd;
 }
-.cid-qs3aoRJYKa .mbr-slider .carousel-control {
-  background: #1b1b1b;
+.cid-qtKNU5kiTS .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
 }
-.cid-qs3aoRJYKa .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
+.cid-qtKNU5kiTS .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
 }
-.cid-qs3aoRJYKa .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
+.cid-qtKNU5kiTS .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
 }
-.cid-qs3aoRJYKa .mbr-slider .modal-body .close {
-  background: #1b1b1b;
+.cid-qtKNU5kiTS .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
 }
-.cid-qs3aoRJYKa .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
+.cid-qtKNU5kiTS .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
 }
-.cid-qs3aoRJYKa .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
+.cid-qtKNU5kiTS .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
 }
-.cid-qsAOUb2zdl {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
+.cid-qtKNU5kiTS .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
 }
-.cid-qsAOUb2zdl .title {
-  margin-bottom: 2rem;
+.cid-qtKNU5kiTS .btn-social {
+  border: none !important;
 }
-.cid-qsAOUb2zdl .mbr-section-subtitle {
-  color: #767676;
+.cid-qtKNU5kiTS [class^="socicon-"]:before,
+.cid-qtKNU5kiTS [class*=" socicon-"]:before {
+  line-height: 44px;
 }
-.cid-qsAOUb2zdl a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
+@media (max-width: 767px) {
+  .cid-qtKNU5kiTS .btn {
+    font-size: 20px !important;
+  }
 }
-.cid-qsAOUb2zdl a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-qsAOUb2zdl .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
-}
-.cid-qsAOUb2zdl .input-group-btn {
-  display: block;
-  text-align: center;
+.cid-qtKNU5kiTS .mbr-section-title {
+  color: #ffffff;
 }
 .cid-qtoUc6Ymnb {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
@@ -2193,8 +2263,8 @@ pre {
   color: #ffffff;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
@@ -3012,8 +3082,8 @@ pre {
   color: #ffffff;
 }
 .cid-qtv5Mbypda {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
@@ -3694,8 +3764,8 @@ pre {
   width: 60%;
 }
 .cid-qttSLcCByW {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
@@ -4126,8 +4196,8 @@ pre {
   text-align: center;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtoh55efvo {
@@ -4168,8 +4238,8 @@ pre {
   word-break: break-word;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtpg8ZaXX5 .navbar {
@@ -4602,8 +4672,8 @@ pre {
   text-align: center;
 }
 .cid-qtnTvP5SFR {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qs1TupRcIH .navbar {
@@ -4966,8 +5036,8 @@ pre {
   }
 }
 .cid-qtoUc6Ymnb {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtxySt6gLZ {
@@ -5038,8 +5108,8 @@ pre {
   text-align: center;
 }
 .cid-qtoUc6Ymnb {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtAD191gUV .navbar {
@@ -5402,8 +5472,8 @@ pre {
   }
 }
 .cid-qtoUc6Ymnb {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #1a126c;
 }
 .cid-qtAD191gUV .navbar {
@@ -5817,4 +5887,514 @@ pre {
 }
 .cid-qtAHVrt4y9 UL {
   text-align: left;
+}
+.cid-qs1TupRcIH .navbar {
+  padding: .5rem 0;
+  background: #1a126c;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qs1TupRcIH .navbar-dropdown.bg-color.transparent.opened {
+  background: #1a126c;
+}
+.cid-qs1TupRcIH a {
+  font-style: normal;
+}
+.cid-qs1TupRcIH .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-qs1TupRcIH .nav-item a {
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qs1TupRcIH .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qs1TupRcIH .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qs1TupRcIH .menu-logo {
+  margin-right: auto;
+}
+.cid-qs1TupRcIH .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qs1TupRcIH .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qs1TupRcIH .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qs1TupRcIH .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qs1TupRcIH .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qs1TupRcIH .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qs1TupRcIH .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qs1TupRcIH .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qs1TupRcIH .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qs1TupRcIH .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qs1TupRcIH .dropdown .dropdown-menu {
+  background: #1a126c;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qs1TupRcIH .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qs1TupRcIH .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qs1TupRcIH .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qs1TupRcIH .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qs1TupRcIH .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qs1TupRcIH .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qs1TupRcIH .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qs1TupRcIH .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qs1TupRcIH .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qs1TupRcIH .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qs1TupRcIH .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qs1TupRcIH button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qs1TupRcIH button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qs1TupRcIH button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qs1TupRcIH button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qs1TupRcIH button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qs1TupRcIH button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qs1TupRcIH button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qs1TupRcIH nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qs1TupRcIH nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qs1TupRcIH nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qs1TupRcIH nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qs1TupRcIH .collapsed .btn {
+  display: flex;
+}
+.cid-qs1TupRcIH .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qs1TupRcIH .collapsed .navbar-collapse.collapsing,
+.cid-qs1TupRcIH .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qs1TupRcIH .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qs1TupRcIH .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qs1TupRcIH .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qs1TupRcIH .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qs1TupRcIH .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qs1TupRcIH .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qs1TupRcIH .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qs1TupRcIH .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qs1TupRcIH .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qs1TupRcIH .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+  margin-top: .5rem;
+}
+.cid-qs1TupRcIH .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qs1TupRcIH .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qs1TupRcIH .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qs1TupRcIH .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qs1TupRcIH .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qs1TupRcIH img {
+    height: 3.8rem !important;
+  }
+  .cid-qs1TupRcIH .btn {
+    display: flex;
+  }
+  .cid-qs1TupRcIH button.navbar-toggler {
+    display: block;
+  }
+  .cid-qs1TupRcIH .navbar-brand {
+    margin-left: 1rem !important;
+    margin-top: .5rem;
+  }
+  .cid-qs1TupRcIH .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qs1TupRcIH .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qs1TupRcIH .navbar-collapse.collapsing,
+  .cid-qs1TupRcIH .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qs1TupRcIH .navbar-collapse.collapsing .navbar-nav,
+  .cid-qs1TupRcIH .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qs1TupRcIH .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qs1TupRcIH .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qs1TupRcIH .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qs1TupRcIH .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qs1TupRcIH .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qs1TupRcIH .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qs1TupRcIH .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qs1TupRcIH .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qs1TupRcIH .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qs1TupRcIH .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+.cid-qtoUc6Ymnb {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #1a126c;
+}
+.cid-qtKHhXSeIx {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qtKHhXSeIx .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-qtKHhXSeIx .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-qtKHhXSeIx .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-qtKHhXSeIx .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-qtKHhXSeIx .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-qtKHhXSeIx .countdown-cont {
+  background: linear-gradient(45deg, #149dcc, #c8ceaf);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qtKHhXSeIx .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-qtKHhXSeIx .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-qtKHhXSeIx .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-qtKHhXSeIx .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-qtKHhXSeIx .number,
+  .cid-qtKHhXSeIx .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-qtKHhXSeIx .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-qtKItLx6Lc {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(0deg, #7fdbfd, #6670a9);
+}
+.cid-qtKItLx6Lc .mbr-iconfont-social {
+  font-size: 32px;
+  color: #ff3366;
+}
+.cid-qtKItLx6Lc .social-list a:focus {
+  text-decoration: none;
+}
+.cid-qtKIubko6r {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-qtKIubko6r .btn-social {
+  border: none !important;
+}
+.cid-qtKIubko6r [class^="socicon-"]:before,
+.cid-qtKIubko6r [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-qtKIubko6r .btn {
+    font-size: 20px !important;
+  }
 }
