create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3254,7 +3254,7 @@ body {
 .cid-qtAzQWorTh {
   padding-top: 105px;
   padding-bottom: 120px;
-  background: linear-gradient(45deg, #1a126c, #97f4f0);
+  background: linear-gradient(45deg, #1a126c, #0f7699);
 }
 @media (min-width: 992px) {
   .cid-qtAzQWorTh .mbr-figure {
