create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4829,12 +4829,12 @@ body {
   }
 }
 .cid-qto7L7Ojgk {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 105px;
+  padding-bottom: 30px;
   background-color: #1a126c;
 }
 .cid-qto7L7Ojgk .mbr-section-subtitle {
-  color: #a7d6e6;
+  color: #ffffff;
 }
 .cid-qto7L7Ojgk .mbr-text {
   color: #767676;
@@ -6123,8 +6123,8 @@ body {
   transition: 0.2s background ease-in-out;
 }
 .cid-qsLfJUONzK {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 60px;
   background-color: #1a126c;
 }
 .cid-qsLfJUONzK h2 {
@@ -7096,8 +7096,8 @@ body {
   }
 }
 .cid-qtVE84qQmK {
-  padding-top: 90px;
-  padding-bottom: 30px;
+  padding-top: 105px;
+  padding-bottom: 0px;
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
 .cid-qs1TupRcIH .navbar {
@@ -7460,8 +7460,8 @@ body {
   }
 }
 .cid-qtm1z90bVV {
-  padding-top: 90px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #a7d6e6;
 }
 .cid-qtm1z90bVV .mbr-slider .carousel-control {
@@ -7503,8 +7503,8 @@ body {
   transition: 0.2s background ease-in-out;
 }
 .cid-qttNDBXBfk {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #a7d6e6;
 }
 .cid-qttNDBXBfk .content-slider {
@@ -7775,7 +7775,7 @@ body {
   text-align: center;
 }
 .cid-qttNDBXBfk .content-slider-wrap {
-  width: 60%;
+  width: 53%;
 }
 .cid-qttSLcCByW {
   padding-top: 15px;
