create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1708,7 +1708,7 @@ body {
 }
 .cid-qvSK4HTIRN {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 75px;
   background-image: url("../../../assets/images/chicago-skyline-at-night-1476869511p8u-1920x822.jpg");
 }
 @media (min-width: 992px) {
@@ -1859,7 +1859,7 @@ body {
 .cid-qvTbBSp4os {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #879a9f;
 }
 .cid-qvTbBSp4os .mbr-slider .carousel-control {
   background: #1b1b1b;
