create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1718,6 +1718,10 @@ body {
     padding-top: 3rem;
   }
 }
+.cid-qvSK4HTIRN .mbr-text,
+.cid-qvSK4HTIRN .mbr-section-btn {
+  text-align: center;
+}
 .cid-qw1Pt4s8bi {
   padding-top: 15px;
   padding-bottom: 30px;
