create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2110,99 +2110,71 @@ body {
 .cid-qwBUAJVUuq UL {
   text-align: center;
 }
-.cid-qw1PRbS65m {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-image: url("../../../assets/images/background1.jpg");
-}
-.cid-qw1PRbS65m .mbr-iconfont {
-  font-size: 48px;
-  padding-right: 1rem;
-}
-.cid-qw1PRbS65m .input {
-  margin-bottom: 15px;
-}
-.cid-qw1PRbS65m .map {
-  width: 100%;
-  height: 30rem;
-}
-.cid-qw1PRbS65m .map iframe {
-  width: inherit;
-  height: 100%;
-}
-.cid-qw1PRbS65m .icon-block {
-  margin-bottom: 10px;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-qw1PRbS65m .icon-block .icon-block__icon {
-  display: inline-block;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-.cid-qw1PRbS65m .icon-block .icon-block__title {
-  display: inline-block;
-  align-self: center;
-  -webkit-align-self: center;
-  margin-bottom: 0;
-  line-height: 1;
-  font-style: italic;
-}
-.cid-qw1PRbS65m .mbr-text {
+#RSRCULPROContactForm-2a SPAN {
   color: #ffffff;
 }
-.cid-qw1PRbS65m a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
+#RSRCULPROContactForm-2a DIV {
+  color: #ffffff;
 }
-.cid-qw1PRbS65m .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
+#RSRCULPROContactForm-2a h3 {
+  font-size: 46px;
 }
-.cid-qw1PRbS65m .input-group-btn {
-  display: block;
-  text-align: center;
+#RSRCULPROContactForm-2a small {
+  font-size: 26px;
 }
-.cid-qw1PRbS65m .google-map {
-  height: 25rem;
-  position: relative;
+#RSRCULPROContactForm-2a .form-check-inline {
+  width: 30%;
+  float: left;
+  color: #a1a1a1;
 }
-.cid-qw1PRbS65m .google-map iframe {
-  height: 100%;
+#RSRCULPROContactForm-2a .form-check-inline1 {
+  width: 30%;
+  float: left;
+  color: #a1a1a1;
+}
+#RSRCULPROContactForm-2a .form-check-inline2 {
+  float: left;
+  color: #a1a1a1;
+}
+#RSRCULPROContactForm-2a .form-checkbox-inline {
   width: 100%;
+  float: left;
+  color: #a1a1a1;
 }
-.cid-qw1PRbS65m .google-map [data-state-details] {
-  color: #6b6763;
-  font-family: Montserrat;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
+#RSRCULPROContactForm-2a .form-check-input {
+  margin-left: 2.25rem;
+}
+#RSRCULPROContactForm-2a #genderRadio1 {
+  margin-left: 3.5rem;
+}
+#RSRCULPROContactForm-2a #genderRadio2 {
+  margin-left: 4.5rem;
+}
+#RSRCULPROContactForm-2a #genderRadio3 {
+  margin-left: 9.25rem;
+}
+#RSRCULPROContactForm-2a #gender-div {
+  border: 1px #a1a1a1 solid;
+  border-radius: 10px;
   width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 55px;
 }
-.cid-qw1PRbS65m .google-map[data-state] {
-  background: #e9e5dc;
+#RSRCULPROContactForm-2a #terms-div {
+  border: 1px #a1a1a1 solid;
+  border-radius: 10px;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  height: 55px;
 }
-.cid-qw1PRbS65m .google-map[data-state="loading"] [data-state-details] {
-  display: none;
+#RSRCULPROContactForm-2a #sendbutton {
+  text-align: left;
 }
-@media (max-width: 767px) {
-  .cid-qw1PRbS65m h2 {
-    padding-top: 2rem;
-  }
-}
-@media (min-width: 768px) {
-  .cid-qw1PRbS65m .container > .row > .col-md-6:first-child {
-    padding-right: 30px;
-  }
-  .cid-qw1PRbS65m .container > .row > .col-md-6:last-child {
-    padding-left: 30px;
-  }
+#RSRCULPROContactForm-2a .engine {
+  display: none !important;
 }
 .cid-qw1Q7680qB {
   padding-top: 30px;
@@ -2261,6 +2233,66 @@ body {
 }
 .cid-qw1Q7680qB .media-container-row .row-copirayt {
   word-break: break-word;
+}
+#RSRCULPROContactForm-2b h3 {
+  font-size: 46px;
+}
+#RSRCULPROContactForm-2b small {
+  font-size: 26px;
+}
+#RSRCULPROContactForm-2b .form-check-inline {
+  width: 30%;
+  float: left;
+  color: #a1a1a1;
+}
+#RSRCULPROContactForm-2b .form-check-inline1 {
+  width: 30%;
+  float: left;
+  color: #a1a1a1;
+}
+#RSRCULPROContactForm-2b .form-check-inline2 {
+  float: left;
+  color: #a1a1a1;
+}
+#RSRCULPROContactForm-2b .form-checkbox-inline {
+  width: 100%;
+  float: left;
+  color: #a1a1a1;
+}
+#RSRCULPROContactForm-2b .form-check-input {
+  margin-left: 2.25rem;
+}
+#RSRCULPROContactForm-2b #genderRadio1 {
+  margin-left: 3.5rem;
+}
+#RSRCULPROContactForm-2b #genderRadio2 {
+  margin-left: 4.5rem;
+}
+#RSRCULPROContactForm-2b #genderRadio3 {
+  margin-left: 9.25rem;
+}
+#RSRCULPROContactForm-2b #gender-div {
+  border: 1px #a1a1a1 solid;
+  border-radius: 10px;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 55px;
+}
+#RSRCULPROContactForm-2b #terms-div {
+  border: 1px #a1a1a1 solid;
+  border-radius: 10px;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  height: 55px;
+}
+#RSRCULPROContactForm-2b #sendbutton {
+  text-align: left;
+}
+#RSRCULPROContactForm-2b .engine {
+  display: none !important;
 }
 .cid-qCOP6PjyBA {
   padding-top: 90px;
@@ -4623,6 +4655,100 @@ body {
     width: 100% !important;
   }
 }
+.cid-qHjGxkdcAu {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-qHjGxkdcAu .icon-transition span {
+  padding: 0.1rem 0.9rem;
+  border-radius: 50%;
+  color: #232323;
+  display: block;
+  height: 3em;
+  line-height: 3em;
+  width: 3em;
+  background: #ffffff none repeat scroll 0 0;
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  font-size: 14px;
+}
+.cid-qHjGxkdcAu .content-row {
+  flex-direction: row-reverse;
+}
+.cid-qHjGxkdcAu .photo-split {
+  padding: 0;
+}
+.cid-qHjGxkdcAu .photo-split img {
+  width: 100%;
+}
+.cid-qHjGxkdcAu .icon-transition span:hover {
+  background-color: #ffbc00;
+}
+.cid-qHjGxkdcAu .counter-container ul {
+  display: -webkit-flex;
+  flex-direction: column;
+}
+.cid-qHjGxkdcAu .counter-container ul li {
+  margin-bottom: .5rem;
+  list-style: ✓;
+}
+.cid-qHjGxkdcAu .counter-container ul li:before {
+  color: #ffbc00;
+  display: inline-block;
+  content: '✓';
+  text-align: center;
+  line-height: 1.5em;
+  transition: all .2s;
+  width: 25px;
+  height: 25px;
+}
+.cid-qHjGxkdcAu .wrap-block {
+  padding: 3rem 3rem;
+}
+.cid-qHjGxkdcAu .wrap-block ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.cid-qHjGxkdcAu .wrap-block ul li {
+  display: inline-block;
+}
+.cid-qHjGxkdcAu .wrap-block ul li span {
+  text-align: center;
+}
+.cid-qHjGxkdcAu .social-media {
+  margin-top: 1.5em;
+  padding: 0;
+}
+.cid-qHjGxkdcAu .social-media ul {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 8px;
+}
+.cid-qHjGxkdcAu .social-media ul li {
+  padding: 4px;
+  display: inline-block;
+}
+.cid-qHjGxkdcAu .mbr-list,
+.cid-qHjGxkdcAu .social-media ul {
+  text-align: left;
+}
+@media (max-width: 500px) {
+  .cid-qHjGxkdcAu .wrap-block {
+    padding: 3rem 1rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qHjGxkdcAu .mbr-section-title,
+  .cid-qHjGxkdcAu .mbr-section-subtitle,
+  .cid-qHjGxkdcAu .mbr-text {
+    text-align: center !important;
+  }
+  .cid-qHjGxkdcAu .social-list {
+    text-align: center !important;
+  }
+}
 .cid-qvReov55SN .navbar {
   padding: .5rem 0;
   background: #19277f;
@@ -5038,100 +5164,6 @@ body {
 }
 .cid-qHjGsQiXHv .card-underline .line {
   background: #ffbc00;
-}
-.cid-qHjGxkdcAu {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #232323;
-}
-.cid-qHjGxkdcAu .icon-transition span {
-  padding: 0.1rem 0.9rem;
-  border-radius: 50%;
-  color: #232323;
-  display: block;
-  height: 3em;
-  line-height: 3em;
-  width: 3em;
-  background: #ffffff none repeat scroll 0 0;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
-  font-size: 14px;
-}
-.cid-qHjGxkdcAu .content-row {
-  flex-direction: row-reverse;
-}
-.cid-qHjGxkdcAu .photo-split {
-  padding: 0;
-}
-.cid-qHjGxkdcAu .photo-split img {
-  width: 100%;
-}
-.cid-qHjGxkdcAu .icon-transition span:hover {
-  background-color: #ffbc00;
-}
-.cid-qHjGxkdcAu .counter-container ul {
-  display: -webkit-flex;
-  flex-direction: column;
-}
-.cid-qHjGxkdcAu .counter-container ul li {
-  margin-bottom: .5rem;
-  list-style: ✓;
-}
-.cid-qHjGxkdcAu .counter-container ul li:before {
-  color: #ffbc00;
-  display: inline-block;
-  content: '✓';
-  text-align: center;
-  line-height: 1.5em;
-  transition: all .2s;
-  width: 25px;
-  height: 25px;
-}
-.cid-qHjGxkdcAu .wrap-block {
-  padding: 3rem 3rem;
-}
-.cid-qHjGxkdcAu .wrap-block ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.cid-qHjGxkdcAu .wrap-block ul li {
-  display: inline-block;
-}
-.cid-qHjGxkdcAu .wrap-block ul li span {
-  text-align: center;
-}
-.cid-qHjGxkdcAu .social-media {
-  margin-top: 1.5em;
-  padding: 0;
-}
-.cid-qHjGxkdcAu .social-media ul {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 8px;
-}
-.cid-qHjGxkdcAu .social-media ul li {
-  padding: 4px;
-  display: inline-block;
-}
-.cid-qHjGxkdcAu .mbr-list,
-.cid-qHjGxkdcAu .social-media ul {
-  text-align: left;
-}
-@media (max-width: 500px) {
-  .cid-qHjGxkdcAu .wrap-block {
-    padding: 3rem 1rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qHjGxkdcAu .mbr-section-title,
-  .cid-qHjGxkdcAu .mbr-section-subtitle,
-  .cid-qHjGxkdcAu .mbr-text {
-    text-align: center !important;
-  }
-  .cid-qHjGxkdcAu .social-list {
-    text-align: center !important;
-  }
 }
 .cid-qHjGyTAq0S {
   padding-top: 90px;
